refactorizacion de metodos